force-app/main/default/objects/Position__c/fields/Active_Contract_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Contract Pricing</label>
    <type>Checkbox</type>
</CustomField>