force-app/main/default/objects/Position__c/fields/Actualized__c.field-meta.xml
<CustomField>
    <fullName>Actualized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has this deal been actualized (usage applied)?</description>
    <inlineHelpText>has this deal been actualized (usage applied)?</inlineHelpText>
    <label>Actualized</label>
    <type>Checkbox</type>
</CustomField>