force-app/main/default/objects/Position__c/fields/Adder__c.field-meta.xml
<CustomField>
    <fullName>Adder__c</fullName>
    <label>Adder</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>