force-app/main/default/objects/Position__c/fields/AdderWACOG__c.field-meta.xml
<CustomField>
    <fullName>AdderWACOG__c</fullName>
    <label>AdderWACOG</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>