force-app/main/default/objects/Position__c/fields/Allocate_Volume_Change_Daily__c.field-meta.xml
<CustomField>
    <fullName>Allocate_Volume_Change_Daily__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box when changing PS volume so it will allocate the change to the assigned daily period usages.  Trigger on the position will handle the allocation.</description>
    <label>Allocate Volume Change Daily</label>
    <type>Checkbox</type>
</CustomField>