force-app/main/default/objects/Position__c/fields/Auto_Renew_Batch__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renew_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auto Renew Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>