force-app/main/default/objects/Position__c/fields/Balancing__c.field-meta.xml
<CustomField>
    <fullName>Balancing__c</fullName>
    <label>Balancing</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>