force-app/main/default/objects/Position__c/fields/BalancingWACOG__c.field-meta.xml
<CustomField>
    <fullName>BalancingWACOG__c</fullName>
    <label>BalancingWACOG</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>