force-app/main/default/objects/Position__c/fields/Basis_Lock__c.field-meta.xml
<CustomField>
    <fullName>Basis_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basis Lock</label>
    <type>Checkbox</type>
</CustomField>