force-app/main/default/objects/Position__c/fields/Basis_Option__c.field-meta.xml
<CustomField>
    <fullName>Basis_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which trading contract (eg option, swap, etc) this position is for</description>
    <inlineHelpText>Which trading contract (eg future, swap, etc) this position is for</inlineHelpText>
    <label>Basis/Option Physical</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>