force-app/main/default/objects/Position__c/fields/Basis_Option_Financial__c.field-meta.xml
<CustomField>
    <fullName>Basis_Option_Financial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Basis/Option Financial</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Basis/Option Financial)</relationshipLabel>
    <relationshipName>Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>