force-app/main/default/objects/Position__c/fields/Basis_P_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Basis_P_Wacog__c</fullName>
    <label>Basis P Wacog</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>