force-app/main/default/objects/Position__c/fields/Bill_Period_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Period_From_Date__c</fullName>
    <label>Bill Period From Date</label>
    <type>Date</type>
</CustomField>