force-app/main/default/objects/Position__c/fields/Billing_Period__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period__c</fullName>
    <formula>Case(MONTH( Bill_Period_To_Date__c ) ,
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
+&quot; &quot;+
TEXT(YEAR(Bill_Period_To_Date__c ))</formula>
    <label>Billing Period</label>
    <type>Text</type>
</CustomField>