force-app/main/default/objects/Position__c/fields/Cashout_Over_Index__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashout Over Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Cashout Over Index)</relationshipLabel>
    <relationshipName>Positions6</relationshipName>
    <type>Lookup</type>
</CustomField>