force-app/main/default/objects/Position__c/fields/Cashout_Over_Margin__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Over_Margin__c</fullName>
    <label>Cashout Over Margin</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>