force-app/main/default/objects/Position__c/fields/Cashout_Under_Adder__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Adder__c</fullName>
    <label>Cashout Under Adder</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>