force-app/main/default/objects/Position__c/fields/Cashout_Under_Index__c.field-meta.xml
<CustomField>
    <fullName>Cashout_Under_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cashout Under Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Cashout Under Index)</relationshipLabel>
    <relationshipName>Positions7</relationshipName>
    <type>Lookup</type>
</CustomField>