force-app/main/default/objects/Position__c/fields/CES_Contract__c.field-meta.xml
<CustomField>
    <fullName>CES_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Contract Details</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>