force-app/main/default/objects/Position__c/fields/CES_Margin__c.field-meta.xml
<CustomField>
    <fullName>CES_Margin__c</fullName>
    <description>What does CES expect to make after consultant commissions are paid</description>
    <formula>DT_Estimated_Margin__c -  Consultant_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What does CES expect to make after consultant commissions are paid</inlineHelpText>
    <label>CES Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>