force-app/main/default/objects/Position__c/fields/Compression_Rate__c.field-meta.xml
<CustomField>
    <fullName>Compression_Rate__c</fullName>
    <label>Compression Rate</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>