force-app/main/default/objects/Position__c/fields/Confirm_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirm_Number__c</fullName>
    <label>Confirm Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>