force-app/main/default/objects/Position__c/fields/Consultant_Margin__c.field-meta.xml
<CustomField>
    <fullName>Consultant_Margin__c</fullName>
    <description>What is the consultant expected to make off of this deal?</description>
    <formula>if(
 not(isblank(CES_Contract__r.Consultant_Unit_Margin__c)),
 CES_Contract__r.Consultant_Unit_Margin__c,
 if (
    not(isblank(CES_Contract__r.Consultant_Margin_Pctg__c)),
    (DT_Estimated_Margin__c * (CES_Contract__r.Consultant_Margin_Pctg__c/100)),
    0
 )
)</formula>
    <inlineHelpText>What is the consultant expected to make off of this deal?</inlineHelpText>
    <label>Consultant Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>