force-app/main/default/objects/Position__c/fields/Contract_APO__c.field-meta.xml
<CustomField>
    <fullName>Contract_APO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract APO</label>
    <referenceTo>Contract_APO__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>