force-app/main/default/objects/Position__c/fields/Contract_Consultant_Unit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Consultant_Unit_Margin__c</fullName>
    <label>Contract Consultant Unit Margin</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>