force-app/main/default/objects/Position__c/fields/Contract_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_Month__c</fullName>
    <description>First date of the month that this position represents</description>
    <inlineHelpText>First date of the month that this position represents</inlineHelpText>
    <label>Contract Month</label>
    <type>Date</type>
</CustomField>