force-app/main/default/objects/Position__c/fields/Contract_Over_Adder__c.field-meta.xml
<CustomField>
    <fullName>Contract_Over_Adder__c</fullName>
    <label>Contract Over Adder</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>