force-app/main/default/objects/Position__c/fields/Contract_Over_Index__c.field-meta.xml
<CustomField>
    <fullName>Contract_Over_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Over Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Contract Over Index)</relationshipLabel>
    <relationshipName>Positions3</relationshipName>
    <type>Lookup</type>
</CustomField>