force-app/main/default/objects/Position__c/fields/Contract_Position__c.field-meta.xml
<CustomField>
    <fullName>Contract_Position__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>for premise margin positions.  This is the main contract position that margin is allocated from</description>
    <inlineHelpText>for premise margin positions.  This is the main contract position that margin is allocated from</inlineHelpText>
    <label>Contract Position</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Positions (Contract Position)</relationshipLabel>
    <relationshipName>Positions1</relationshipName>
    <type>Lookup</type>
</CustomField>