force-app/main/default/objects/Position__c/fields/Contract_Pricing_Index__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pricing_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Pricing Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Contract Pricing Index)</relationshipLabel>
    <relationshipName>Positions2</relationshipName>
    <type>Lookup</type>
</CustomField>