force-app/main/default/objects/Position__c/fields/Contract_Rollover_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rollover_Term__c</fullName>
    <formula>Contract_APO__r.CESContract__r.Renewal_Term__c</formula>
    <label>Contract Rollover Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>