force-app/main/default/objects/Position__c/fields/Contract_Under_Index__c.field-meta.xml
<CustomField>
    <fullName>Contract_Under_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Under Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Contract Under Index)</relationshipLabel>
    <relationshipName>Positions4</relationshipName>
    <type>Lookup</type>
</CustomField>