force-app/main/default/objects/Position__c/fields/Contract_Under_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Under_Margin__c</fullName>
    <label>Contract Under Margin</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>