force-app/main/default/objects/Position__c/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <description>Price to the customer for fixed price or sales adder for index price</description>
    <inlineHelpText>Price to the customer for fixed price or sales adder for index price</inlineHelpText>
    <label>Customer Price</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>