force-app/main/default/objects/Position__c/fields/Customer_PriceWACOG__c.field-meta.xml
<CustomField>
    <fullName>Customer_PriceWACOG__c</fullName>
    <label>Customer PriceWACOG</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>