force-app/main/default/objects/Position__c/fields/Deal_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Deal_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which deal ticket the closed position is associated with</description>
    <inlineHelpText>Which deal ticket the closed position is associated with</inlineHelpText>
    <label>Deal Ticket</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>It has to be a deal ticket, not a REP invoice.</errorMessage>
        <filterItems>
            <field>Billing_Documents__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Deal Ticket</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Billing_Documents__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>