force-app/main/default/objects/Position__c/fields/Dehydration_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dehydration_Rate__c</fullName>
    <label>Dehydration Rate</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>