force-app/main/default/objects/Position__c/fields/Delete_Triggered_by_Margin_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Delete_Triggered_by_Margin_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Triggered by Margin Deletion</label>
    <type>Checkbox</type>
</CustomField>