force-app/main/default/objects/Position__c/fields/Detail_ID__c.field-meta.xml
<CustomField>
    <fullName>Detail_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Detail ID</label>
    <type>Text</type>
</CustomField>