force-app/main/default/objects/Position__c/fields/Do_Not_Sync_Update__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Sync_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Sync Update</label>
    <type>Checkbox</type>
</CustomField>