force-app/main/default/objects/Position__c/fields/DT_Basis__c.field-meta.xml
<CustomField>
    <fullName>DT_Basis__c</fullName>
    <inlineHelpText>Financial Basis</inlineHelpText>
    <label>DT Basis Financial</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>