force-app/main/default/objects/Position__c/fields/DT_Basis_Physical__c.field-meta.xml
<CustomField>
    <fullName>DT_Basis_Physical__c</fullName>
    <inlineHelpText>Physical Basis</inlineHelpText>
    <label>DT Basis Physical</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>