force-app/main/default/objects/Position__c/fields/DT_Estimated_Margin__c.field-meta.xml
<CustomField>
    <fullName>DT_Estimated_Margin__c</fullName>
    <formula>if ( 
   and(NYMEX_lock__c ,  Basis_Lock__c ),
   Customer_Price__c - (DT_Basis__c +  DT_Basis_Physical__c + DT_NYMEX__c + Adder__c),

   if (
      Basis_Lock__c,
      Customer_Price__c - (DT_Basis__c +  DT_Basis_Physical__c + Adder__c),
      Customer_Price__c - Adder__c
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DT Estimated Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>