force-app/main/default/objects/Position__c/fields/DT_NYMEX__c.field-meta.xml
<CustomField>
    <fullName>DT_NYMEX__c</fullName>
    <description>Nymex price for the deal ticket</description>
    <inlineHelpText>Nymex price for the deal ticket</inlineHelpText>
    <label>DT NYMEX</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>