force-app/main/default/objects/Position__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>for reporting purposes</description>
    <formula>CASE(Volume_Frequency__c
  , &#39;Daily&#39;, Contract_Month__c 
  , DATE(IF(MONTH(Contract_Month__c) = 12, YEAR(Contract_Month__c)+ 1, YEAR(Contract_Month__c)),
         IF(MONTH(Contract_Month__c) = 12, 1, MONTH(Contract_Month__c) + 1),
         DAY(Contract_Month__c)
    ) - 1
)</formula>
    <inlineHelpText>for reporting purposes</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>