force-app/main/default/objects/Position__c/fields/Fixed_Quote__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed Quote</label>
    <referenceTo>Fixed_Quote__c</referenceTo>
    <relationshipLabel>Executed Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>