force-app/main/default/objects/Position__c/fields/Fixed_Quote_Group__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Quote_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fixed Quote Group</label>
    <referenceTo>Fixed_Quote_Group__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <type>Lookup</type>
</CustomField>