force-app/main/default/objects/Position__c/fields/Flat_Fee__c.field-meta.xml
<CustomField>
    <fullName>Flat_Fee__c</fullName>
    <label>Flat Fee</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>