force-app/main/default/objects/Position__c/fields/Floating_Component_Contract_Detail__c.field-meta.xml
<CustomField>
    <fullName>Floating_Component_Contract_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floating Component Contract Detail</label>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>Positions (Floating Component Contract Detail)</relationshipLabel>
    <relationshipName>Positions2</relationshipName>
    <type>Lookup</type>
</CustomField>