force-app/main/default/objects/Position__c/fields/Floating_Index__c.field-meta.xml
<CustomField>
    <fullName>Floating_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Floating Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Positions (Floating Index)</relationshipLabel>
    <relationshipName>Positions5</relationshipName>
    <type>Lookup</type>
</CustomField>