force-app/main/default/objects/Position__c/fields/Floating_Index_Adder__c.field-meta.xml
<CustomField>
    <fullName>Floating_Index_Adder__c</fullName>
    <label>Floating Index Adder</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>