force-app/main/default/objects/Position__c/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel %</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>