force-app/main/default/objects/Position__c/fields/Fuel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost__c</fullName>
    <description>Fuel cost per Dth</description>
    <inlineHelpText>Fuel cost per Dth</inlineHelpText>
    <label>Fuel Cost</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>