force-app/main/default/objects/Position__c/fields/Fuel_Cost_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Cost_Wacog__c</fullName>
    <label>Fuel Cost Wacog</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>