force-app/main/default/objects/Position__c/fields/Fuel_only_nymex_memory__c.field-meta.xml
<CustomField>
    <fullName>Fuel_only_nymex_memory__c</fullName>
    <label>Fuel-only nymex memory</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>