force-app/main/default/objects/Position__c/fields/GEM_Obligation_ID__c.field-meta.xml
<CustomField>
    <fullName>GEM_Obligation_ID__c</fullName>
    <description>external Obligation ID from CRES GEM system</description>
    <inlineHelpText>external Obligation ID from CRES GEM system</inlineHelpText>
    <label>GEM Obligation ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>