force-app/main/default/objects/Position__c/fields/Hedged_Percent__c.field-meta.xml
<CustomField>
    <fullName>Hedged_Percent__c</fullName>
    <formula>Hedged_Volume__c / Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hedged Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>