force-app/main/default/objects/Position__c/fields/Hedged_Volume__c.field-meta.xml
<CustomField>
    <fullName>Hedged_Volume__c</fullName>
    <label>Hedged Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>