force-app/main/default/objects/Position__c/fields/historical_volume__c.field-meta.xml
<CustomField>
    <fullName>historical_volume__c</fullName>
    <label>historical volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>