force-app/main/default/objects/Position__c/fields/Last_12_Months_Usage__c.field-meta.xml
<CustomField>
    <fullName>Last_12_Months_Usage__c</fullName>
    <label>Last 12 Months Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>