force-app/main/default/objects/Position__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>