force-app/main/default/objects/Position__c/fields/Margin_for_supplier_payments__c.field-meta.xml
<CustomField>
    <fullName>Margin_for_supplier_payments__c</fullName>
    <label>Unit Margin</label>
    <precision>7</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>