force-app/main/default/objects/Position__c/fields/Margin_times_volume__c.field-meta.xml
<CustomField>
    <fullName>Margin_times_volume__c</fullName>
    <formula>Volume__c *  DT_Estimated_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin times volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>