force-app/main/default/objects/Position__c/fields/Needs_Daily_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Needs_Daily_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for PS.  Does this position need to be allocated daily outside of the normal process?  used mainly for imported positions.</description>
    <inlineHelpText>for PS.  Does this position need to be allocated daily outside of the normal process?  used mainly for imported positions.</inlineHelpText>
    <label>Needs Daily Allocation</label>
    <type>Checkbox</type>
</CustomField>