force-app/main/default/objects/Position__c/fields/Nominated__c.field-meta.xml
<CustomField>
    <fullName>Nominated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>has this deal been nominated?</description>
    <inlineHelpText>has this deal been nominated?</inlineHelpText>
    <label>Nominated</label>
    <type>Checkbox</type>
</CustomField>