force-app/main/default/objects/Position__c/fields/NYMEX_lock__c.field-meta.xml
<CustomField>
    <fullName>NYMEX_lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NYMEX lock</label>
    <type>Checkbox</type>
</CustomField>