force-app/main/default/objects/Position__c/fields/Nymex_Wacog__c.field-meta.xml
<CustomField>
    <fullName>Nymex_Wacog__c</fullName>
    <label>Nymex Wacog</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>