force-app/main/default/objects/Position__c/fields/Originated_From_Margin_Creation__c.field-meta.xml
<CustomField>
    <fullName>Originated_From_Margin_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Originated From Margin Creation</label>
    <type>Checkbox</type>
</CustomField>