force-app/main/default/objects/Position__c/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <description>from the pricing scenario other/misc section</description>
    <inlineHelpText>from the pricing scenario other/misc section</inlineHelpText>
    <label>Other Charges</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>