force-app/main/default/objects/Position__c/fields/Other_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee_Rate__c</fullName>
    <label>Other Fee Rate</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>